# grape

./: LICENSE  README.md
grape/: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  res.qrc
grape/misc/: clickQLabel.cpp  clickQLabel.h
grape/net/base-net/: net.cpp  net.h
grape/net/dashboard-net/: deadline-net.cpp  task-net.cpp
grape/net/include/hasher/: hasher.cpp  hasher.h
grape/net/include/httplib/: httplib.h
grape/net/user-net/: user-net.cpp  user-net.h
grape/src/adddeadlinedialog/: adddeadlinedialog.cpp  adddeadlinedialog.h  adddeadlinedialog.ui
grape/src/addtasks/: addtask.cpp  addtask.h  addtask.ui
grape/src/dashboard/: ayewords-dashboard.cpp  dashboard.cpp  dashboard.h  dashboard.ui  deadlines-dashboard.cpp  notes-dashboard.cpp  settings-dashboard.cpp  tasks-dashboard.cpp  timer-dashboard.cpp
grape/src/login/: login.cpp  login.h  login.ui
grape/src/mainwindow/: mainwindow.cpp  mainwindow.h  net-mainwindow.cpp  resize-mainwindow.cpp  views-mainwindow.cpp
grape/src/profile/: profile.cpp  profile.h  profile.ui
grape/src/registration/: registration.cpp  registration.h  registration.ui
grape/src/settingsmenu/: settingsmenu.cpp  settingsmenu.h  settingsmenu.ui
grape/src/test/: test.cpp  test.h  test.ui
grape/src/types/: structs.h
server/: .env.example  .gitignore  main.py
server/app/: __init__.py  config.py  models.py
server/app/routes/: __init__.py  aue.py  deadlines.py  notes.py  tasks.py  users.py
server/app/utils/: jwtdec.py
website/: index.html
website/css/: style.css
website/js/: script.js
website/static/: style.css
website/templates/: index.html
